Fix spotbugs
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>